#666 поправил мультимодуль